--- a/.github/workflows/issue-branch&assign.yml
+++ b/.github/workflows/issue-branch&assign.yml
@@ -1,4 +1,4 @@
-name: create branch when issue opened
+name: issue ci
 
 on:
   issues:
@@ -8,9 +8,6 @@ jobs:
   create-branch:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
       - name: Create branch
         uses: actions/github-script@v7
         with:
@@ -37,3 +34,19 @@ jobs:
               sha: refData.object.sha,
             });
             console.log(`Branch ${branchName} created successfully!`);
+
+  assign:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 自动分配问题到人民的勤务员
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.QWY_SYNC_BOT_TOKEN }}
+          script: |
+            const issueOwner = context.repo.owner;
+            github.rest.issues.addAssignees({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              assignees: [issueOwner]
+            });
