--- a/.github/workflows/issue-branch&assign.yml
+++ b/.github/workflows/issue-branch&assign.yml
@@ -11,6 +11,7 @@ jobs:
       - name: Create branch
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.QWY_SYNC_BOT_TOKEN }}
           script: |
             const issue = context.payload.issue;
             const issueTitle = issue.title.replace(/[^a-zA-Z0-9]/g, '_');
