chore: 🔨 不删除`markdown`行空白，防止使用空格换行时被删除

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
   "[markdown]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.wordWrap": "off",
-    "editor.formatOnSave": false
+    "editor.formatOnSave": false,
+    "editor.trimAutoWhitespace": false,
+    "files.trimTrailingWhitespace": false
   },
   "[javascript]": {
     "editor.defaultFormatter": "vscode.typescript-language-features"
