--- a/.github/ISSUE_TEMPLATE/2_feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/2_feature_request.yml
@@ -9,12 +9,25 @@ body:
       value: |
         ## 功能要求
 
-        请简要描述您想要的功能或改进建议。
+        - 请简要描述您想要的功能或改进建议。
+        - 标题必须格式化为`[脚本名称]:期望功能`，例如`[外语终结者]:支持新地址`。
+        - 您可以提供屏幕截图/网页地址，以更好地显示你的想法。
+        - 带有星号（*）的选项为必填，其他可选填。**如果你填写的资料不符合规范，维护者可能不予回复，并直接关闭这个 issue。**
+        - 如果你可以自行添加这个功能，我们随时欢迎你提交 Pull Request，并将你的修改合并到上游。
 
-        标题必须格式`[脚本名称]:期望功能`，例如`[外语终结者]:支持新地址`。
+ # https://github.com/WhiteSevs/TamperMonkeyScript/blob/master/.github/ISSUE_TEMPLATE/feature_request_zh.yml?plain=1
 
-        您可以提供屏幕截图/网页地址，以更好地显示你的想法。
-
+  - type: checkboxes
+    id: ensure
+    attributes:
+      label: 先决条件
+      description: "若以下任意选项不适用，请勿提交这个 issue，因为我们会把它关闭"
+      options:
+        - label: "本issue已加上**脚本名称与功能**"
+          required: true
+        - label: "我已经在[这里](https://github.com/ChinaGodMan/UserScripts/issues?q=is%3Aissue+label%3Aenhancement)找过我要提出的建议，**并且没有找到相关问题**"
+          required: true
+          
   - type: textarea
     id: user_stories
     attributes:
