--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@eslint/json": "^0.12.0",
     "@eslint/markdown": "^6.4.0",
     "@stylistic/eslint-plugin-js": "^4.2.0",
+    "cz-git": "^1.11.1",
+    "czg": "^1.11.1",
     "eslint": "^9.26.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-regexp": "^2.7.0",
@@ -51,8 +53,5 @@
     "docs:update-scripts:translate": "python utils/translate_chinese_to_filelang.py",
     "json:update-greasyfork-scripts:time": "python utils/upadate_greasyfork.py",
     "format:script": "python utils/copy_js_files.py"
-  },
-  "dependencies": {
-    "cz-git": "^1.11.1"
   }
 }
