--- a/.github/workflows/SyncDoc.yml
+++ b/.github/workflows/SyncDoc.yml
@@ -58,7 +58,7 @@ jobs:
       - name: 翻译脚本自述
         run: python utils/translate_chinese_to_filelang.py
 
-      - name: 修复其他语言readme导航
+      - name: 修复其他语言readme中的相对路径
         run: python utils/fix_toc.py
 
       - name: 设置机器人提交
