ci: 调整执行顺序,刷新`徽章`和`帮助`内容需要从修复`TOC`之后提取到准确的标记点

--- a/.github/workflows/SyncDoc.yml
+++ b/.github/workflows/SyncDoc.yml
@@ -47,12 +47,6 @@ jobs:
       - name: 导航栏
         run: python utils/navigation.py
 
-      - name: 徽章信息
-        run: python utils/update_shields.py
-
-      - name: 帮助信息
-        run: python utils/update_help.py
-
       - name: 所有脚本
         run: python utils/update_related_all_scripts.py
 
@@ -65,11 +59,18 @@ jobs:
       - name: 翻译仓库自述
         run: python utils/translate_force_chinese_to_lang.py
 
-      - name: 翻译脚本自述
-        run: python utils/translate_chinese_to_filelang.py
-
       - name: 修复其他语言readme中的相对路径
         run: python utils/fix_toc.py
+
+      # `徽章信息` `帮助信息`  需要从修复toc之后提取脚本列表标记点.
+      - name: 徽章信息
+        run: python utils/update_shields.py
+
+      - name: 帮助信息
+        run: python utils/update_help.py
+
+      - name: 翻译脚本自述
+        run: python utils/translate_chinese_to_filelang.py
 
       - name: 设置机器人提交
         run: |
