--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "ssri": "^12.0.0"
   },
   "scripts": {
+    "isort": "isort utils/",
+    "flake8": "flake8 --config=pyproject.toml",
     "lint": "eslint . --cache",
     "lint:all": "eslint .",
     "lint:fix": "eslint . --fix --cache",
