--- a/.github/workflows/SyncGreasyFork.yml
+++ b/.github/workflows/SyncGreasyFork.yml
@@ -19,7 +19,7 @@ jobs:
         run: pip install -r utils/requirements.txt
 
       - name: 重新同步脚本
-        run: python utils/script-import-sync.py -s True
+        run: python utils/script-import-sync.py -s
         env:
           GFU: ${{ secrets.GFU }}
           GFP: ${{ secrets.GFP }}
