--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "ssri": "^12.0.0"
   },
   "scripts": {
+    "prepare": "husky",
+    "build": "pwsh -noprofile -command buildscript",
     "bump:scripts": "python utils/update_version.py",
     "isort": "isort utils/",
     "flake8": "flake8 --config=pyproject.toml",
