--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^9.28.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-regexp": "^2.7.0",
+    "eslint-plugin-userscripts": "^0.5.6",
     "eslint-plugin-yml": "^1.18.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0",
